--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
     "test": "DATABASE_URL=postgresql://postgres:password@localhost:5432/skelly_dev vitest run",
     "test:watch": "DATABASE_URL=postgresql://postgres:password@localhost:5432/skelly_dev vitest watch",
     "lint": "eslint src --ext .ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate:openapi": "tsx src/scripts/generate-openapi-from-routes.ts"
   },
   "dependencies": {
     "@skelly/db": "*",
@@ -17,14 +18,18 @@
     "@skelly/utils": "*",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "lodash": "^4.17.21",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.10.5",
     "@types/supertest": "^6.0.2",
     "nodemon": "^3.0.2",
