services and repositories pattern

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@skelly/db": "*",
+    "@skelly/repositories": "*",
+    "@skelly/services": "*",
     "@skelly/types": "*",
     "@skelly/utils": "*",
     "compression": "^1.7.4",
